src/main/java/com/example/credit_service_project/service/errors/ErrorException.java
package com.example.credit_service_project.service.errors;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ErrorException {
    private String message;
}
